# req

./: '  .README.md.swp  .gitignore  .gitlab-ci.yml  ;  Cargo.toml  LICENSE  README.md  headers
autocompletions/: _req  _req.ps1  req.bash  req.fish
src/: .bin.rs.swp  .main.rs.swp  bin.rs  editor.rs  lib.rs  main.rs  options.rs  req_types.rs
src/asset_extract/: mod.rs
src/asset_extract/test_data/: doc.html
src/base_helpers/: mod.rs
src/encode/: base64.rs  mod.rs
src/header_editor/: .mod.rs.swp  mod.rs  parser.rs
src/payload/: editor.rs  mod.rs
src/quicksock/: mod.rs
src/req_types/: display.rs  mod.rs  req.rs
