[package]
name = "req"
version = "0.2.0"
authors = ["Nicholas Donnelly <nick@donnelly.cc>"]

[dependencies]
hyper = "0.12"
hyper-tls = "0.3.2"
tokio-core = "0.1.10"
dotenv = "0.10.1"
futures = "0.1"
clap = "2"
stopwatch = "0.0.7"
colored = "1.6"
bytes = "0.4"
regex = "0.2"
rand = "0.4"

[lib]
name = "reqlib"
path = "src/lib.rs"

[[bin]]
name = "req"
path = "src/bin/main.rs"
