[package]
name = "req"
version = "0.2.0"
edition = "2018"
authors = ["Nicholas Donnelly <nick@donnelly.cc>"]

[dependencies]
hyper = { version = "0.14", features = [ "full" ] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = [ "full" ] }
dotenv = "0.10.1"
futures = "0.1"
clap = "2"
stopwatch = "0.0.7"
colored = "1.6"
bytes = "0.4"
regex = "0.2"
rand = "0.4"

[lib]
name = "reqlib"
path = "src/lib.rs"

[[bin]]
name = "req"
path = "src/bin/main.rs"
